e2e/multi-network-policy-nftables-e2e.yml
---
kind: ClusterRole
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: multi-networkpolicy
rules:
  - apiGroups: ["k8s.cni.cncf.io"]
    resources:
      - '*'
    verbs:
      - '*'
  - apiGroups:
      - ""
    resources:
      - pods
      - namespaces
    verbs:
      - list
      - watch
      - get
  # Watch for changes to Kubernetes NetworkPolicies.
  - apiGroups: ["networking.k8s.io"]
    resources:
      - networkpolicies
    verbs:
      - watch
      - list
  - apiGroups:
      - ""
      - events.k8s.io
    resources:
      - events
    verbs:
      - create
      - patch
      - update
---
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: multi-networkpolicy
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: multi-networkpolicy
subjects:
- kind: ServiceAccount
  name: multi-networkpolicy
  namespace: kube-system
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: multi-networkpolicy
  namespace: kube-system
# ---
# kind: ConfigMap
# apiVersion: v1
# metadata:
#   name: multi-networkpolicy-custom-v4-rules
#   namespace: kube-system
#   labels:
#     tier: node
#     app: multi-networkpolicy
# data:
#   custom-v4-rules.txt: |
#     # accept redirect
#     -p icmp --icmp-type redirect -j ACCEPT
#     # accept fragmentation-needed (for MTU discovery)
#     -p icmp --icmp-type fragmentation-needed -j ACCEPT
# ---
# kind: ConfigMap
# apiVersion: v1
# metadata:
#   name: multi-networkpolicy-custom-v6-rules
#   namespace: kube-system
#   labels:
#     tier: node
#     app: multi-networkpolicy
# data:
#   custom-v6-rules.txt: |
#     # accept NDP
#     -p icmpv6 --icmpv6-type neighbor-solicitation -j ACCEPT
#     -p icmpv6 --icmpv6-type neighbor-advertisement -j ACCEPT
#     # accept RA/RS
#     -p icmpv6 --icmpv6-type router-solicitation -j ACCEPT
#     -p icmpv6 --icmpv6-type router-advertisement -j ACCEPT
#     # accept redirect
#     -p icmpv6 --icmpv6-type redirect -j ACCEPT
#     # accept packet-too-big (for MTU discovery)
#     -p icmpv6 --icmpv6-type packet-too-big -j ACCEPT
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: multi-networkpolicy-ds-amd64
  namespace: kube-system
  labels:
    tier: node
    app: multi-networkpolicy
    name: multi-networkpolicy
spec:
  selector:
    matchLabels:
      name: multi-networkpolicy
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        tier: node
        app: multi-networkpolicy
        name: multi-networkpolicy
    spec:
      hostNetwork: true
      nodeSelector:
        kubernetes.io/arch: amd64
      tolerations:
      - operator: Exists
        effect: NoSchedule
      serviceAccountName: multi-networkpolicy
      containers:
      - name: multi-networkpolicy
        image: localhost:5000/multi-networkpolicy-nftables:e2e
        command: ["/usr/bin/multi-networkpolicy-nftables"]
        args:
        - "--host-prefix=/host"
        # change this if runtime is different that crio default
        - "--container-runtime-endpoint=/run/containerd/containerd.sock"
        # (e2e test only) enshorten sync period to fast sync
        - "--sync-period=1"
        # uncomment this if you need to accept link-local address traffic
        #- "--allow-ipv6-src-prefix=fe80::/10"
        #- "--allow-ipv6-dst-prefix=fe80::/10"
        # uncomment if you want to accept ICMP/ICMPv6 traffic
        # - "--accept-icmp"
        # - "--accept-icmpv6"
        - "--network-plugins=macvlan,bond,ipvlan"
        - -v=10
        resources:
          requests:
            cpu: "100m"
            memory: "80Mi"
          limits:
            cpu: "100m"
            memory: "150Mi"
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN", "NET_ADMIN"]
        volumeMounts:
        - name: host
          mountPath: /host
        - name: var-lib-multinetworkpolicy
          mountPath: /var/lib/multi-networkpolicy
        # - name: multi-networkpolicy-custom-rules
        #   mountPath: /etc/multi-networkpolicy/rules
        #   readOnly: true
      volumes:
        - name: host
          hostPath:
            path: /
        - name: var-lib-multinetworkpolicy
          hostPath:
            path: /var/lib/multi-networkpolicy
        # - name: multi-networkpolicy-custom-rules
        #   projected:
        #     sources:
        #       - configMap:
        #           name: multi-networkpolicy-custom-v4-rules
        #       - configMap:
        #           name: multi-networkpolicy-custom-v6-rules
