e2e/stacked-regular.yml

apiVersion: v1
kind: Namespace
metadata:
    name: test-stacked

--- # Pods
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  namespace: test-stacked
  labels:
    app: pod-a
spec:
  containers:
  - name: macvlan-worker1
    image: quay.io/openshift-kni/cnf-tests:4.11
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}
    containers:
  - name: debug-ip-tables
    image: localhost:5000/multus-networkpolicy-iptables:e2e
    command: ["sh", "-c", "while true; do iptables -L; sleep 10; done"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-b
  namespace: test-stacked
  labels:
    app: pod-b
spec:
  containers:
  - name: macvlan-worker1
    image: quay.io/openshift-kni/cnf-tests:4.11
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-c
  namespace: test-stacked
  labels:
    app: pod-c
spec:
  containers:
  - name: macvlan-worker1
    image: quay.io/openshift-kni/cnf-tests:4.11
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-d
  namespace: test-stacked
  labels:
    app: pod-d
spec:
  containers:
  - name: macvlan-worker1
    image: quay.io/openshift-kni/cnf-tests:4.11
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}

---
apiVersion: k8s.cni.cncf.io/v1beta1
kind: MultiNetworkPolicy
metadata:
  name: test-multinetwork-policy-stacked-2
  namespace: test-stacked
  annotations:
    k8s.v1.cni.cncf.io/policy-for: default/macvlan1-config
spec:
  podSelector:
    matchLabels:
      app: pod-a
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod-c

--- # NetworkPolicies
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-stacked-1
  namespace: test-stacked
spec:
  podSelector:
    matchLabels:
      app: pod-a
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod-b
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-stacked-2
  namespace: test-stacked
spec:
  podSelector:
    matchLabels:
      app: pod-a
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod-c
