e2e/stacked.yml
---
apiVersion: "k8s.cni.cncf.io/v1"
kind: NetworkAttachmentDefinition
metadata:
  namespace: default
  name: macvlan1-stacked
spec: 
  config: '{
            "cniVersion": "0.3.1",
            "name": "macvlan1-stacked",
            "plugins": [
                {
                    "type": "macvlan",
                    "capabilities": { "ips": true },
                    "mode": "bridge",
                    "ipam":{"type":"host-local","subnet":"2.2.5.0/24","rangeStart":"2.2.5.8","rangeEnd":"2.2.5.67","routes":[{"dst":"0.0.0.0/0"}]}
                }]
        }'
---
apiVersion: v1
kind: Namespace
metadata:
    name: test-stacked-multi

--- # Pods
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  namespace: test-stacked-multi
  annotations:
    k8s.v1.cni.cncf.io/networks: default/macvlan1-stacked
  labels:
    app: pod-a
spec:
  containers:
  - name: macvlan-worker1
    image: quay.io/openshift-kni/cnf-tests:4.11
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}
    containers:
  - name: debug-ip-tables
    image: ghcr.io/k8snetworkplumbingwg/multi-networkpolicy-iptables:snapshot-amd64
    command: ["sh", "-c", "while true; do iptables -L -v -n; sleep 10; done"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-b
  namespace: test-stacked-multi
  annotations:
    k8s.v1.cni.cncf.io/networks: default/macvlan1-stacked
  labels:
    app: pod-b
spec:
  containers:
  - name: macvlan-worker1
    image: quay.io/openshift-kni/cnf-tests:4.11
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-c
  namespace: test-stacked-multi
  annotations:
    k8s.v1.cni.cncf.io/networks: default/macvlan1-stacked
  labels:
    app: pod-c
spec:
  containers:
  - name: macvlan-worker1
    image: quay.io/openshift-kni/cnf-tests:4.11
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-d
  namespace: test-stacked-multi
  annotations:
    k8s.v1.cni.cncf.io/networks: default/macvlan1-stacked
  labels:
    app: pod-d
spec:
  containers:
  - name: macvlan-worker1
    image: quay.io/openshift-kni/cnf-tests:4.11
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}

--- # MultiNetworkPolicies
apiVersion: k8s.cni.cncf.io/v1beta1
kind: MultiNetworkPolicy
metadata:
  name: test-multinetwork-policy-stacked-1
  namespace: test-stacked-multi
  annotations:
    k8s.v1.cni.cncf.io/policy-for: default/macvlan1-stacked
spec:
  podSelector:
    matchLabels:
      app: pod-a
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod-b
---
apiVersion: k8s.cni.cncf.io/v1beta1
kind: MultiNetworkPolicy
metadata:
  name: test-multinetwork-policy-stacked-2
  namespace: test-stacked-multi
  annotations:
    k8s.v1.cni.cncf.io/policy-for: default/macvlan1-stacked
spec:
  podSelector:
    matchLabels:
      app: pod-a
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod-c


--- # Regular


apiVersion: v1
kind: Namespace
metadata:
    name: test-stacked-regular

--- # Regular Pods
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  namespace: test-stacked-regular
  labels:
    app: pod-a
spec:
  containers:
  - name: macvlan-worker1
    image: quay.io/openshift-kni/cnf-tests:4.11
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}
    containers:
  - name: debug-ip-tables
    image: ghcr.io/k8snetworkplumbingwg/multi-networkpolicy-iptables:snapshot-amd64
    command: ["sh", "-c", "while true; do iptables -L; sleep 10; done"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-b
  namespace: test-stacked-regular
  labels:
    app: pod-b
spec:
  containers:
  - name: macvlan-worker1
    image: quay.io/openshift-kni/cnf-tests:4.11
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-c
  namespace: test-stacked-regular
  labels:
    app: pod-c
spec:
  containers:
  - name: macvlan-worker1
    image: quay.io/openshift-kni/cnf-tests:4.11
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-d
  namespace: test-stacked-regular
  labels:
    app: pod-d
spec:
  containers:
  - name: macvlan-worker1
    image: quay.io/openshift-kni/cnf-tests:4.11
    command: ["nc", "-kl", "0.0.0.0", "5555"]
    securityContext:
      privileged: true
    resources:
      limits: { memory: 128Mi, cpu: "1" }
      requests: { memory: 64Mi, cpu: "0.2"}

--- # Regular NetworkPolicies
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-stacked-1
  namespace: test-stacked-regular
spec:
  podSelector:
    matchLabels:
      app: pod-a
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod-b
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-stacked-2
  namespace: test-stacked-regular
spec:
  podSelector:
    matchLabels:
      app: pod-a
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod-c
